Add updates page, enhance navigation, and implement back-to-top button; improve SEO with Open Graph and Twitter Card metadata

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <title>Soteria - Secure Local Password Manager</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="assets/soteria.png">
+    <!-- Open Graph -->
+    <meta property="og:title" content="Soteria - Secure Local Password Manager">
+    <meta property="og:description" content="A secure local-first password manager that keeps your credentials safe on your own machine.">
+    <meta property="og:image" content="assets/soteria.png">
+    <meta property="og:url" content="https://nikokiru.github.io/soteria/">
+    <meta property="og:type" content="website">
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Soteria - Secure Local Password Manager">
+    <meta name="twitter:description" content="A secure local-first password manager that keeps your credentials safe on your own machine.">
+    <meta name="twitter:image" content="assets/soteria.png">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,6 +38,7 @@
                 <li><a href="#demo">Demo</a></li>
                 <li><a href="#security">Security</a></li>
                 <li><a href="#faq">FAQ</a></li>
+                <li><a href="updates.html">Updates</a></li>
                 <li><a href="https://github.com/nikokiru/soteria" target="_blank" class="btn btn-outline">GitHub</a></li>
             </ul>
             <button class="mobile-menu-btn" aria-label="Toggle menu">
@@ -264,7 +276,7 @@
                             <span class="placeholder-hint">Desktop Application</span>
                         </div>
                     </div>
-                    <img src="assets/screenshot-gui.svg" alt="Soteria Desktop Application" class="screenshot-img">
+                    <img src="assets/screenshot-gui.svg" alt="Soteria Desktop Application" class="screenshot-img" loading="lazy">
                     <h3>Desktop App</h3>
                     <p>Modern GUI with all features at your fingertips</p>
                 </div>
@@ -276,7 +288,7 @@
                             <span class="placeholder-hint">Command Line Interface</span>
                         </div>
                     </div>
-                    <img src="assets/screenshot-cli.svg" alt="Soteria CLI" class="screenshot-img">
+                    <img src="assets/screenshot-cli.svg" alt="Soteria CLI" class="screenshot-img" loading="lazy">
                     <h3>Command Line</h3>
                     <p>Powerful CLI for automation and scripting</p>
                 </div>
@@ -288,7 +300,7 @@
                             <span class="placeholder-hint">Browser Extension</span>
                         </div>
                     </div>
-                    <img src="assets/screenshot-extension.svg" alt="Soteria Browser Extension" class="screenshot-img">
+                    <img src="assets/screenshot-extension.svg" alt="Soteria Browser Extension" class="screenshot-img" loading="lazy">
                     <h3>Browser Extension</h3>
                     <p>Seamless autofill in Chrome, Edge, and Brave</p>
                 </div>
@@ -602,6 +614,7 @@
                     <a href="#features">Features</a>
                     <a href="#security">Security</a>
                     <a href="#demo">Password Generator</a>
+                    <a href="updates.html">Updates</a>
                     <a href="#faq">FAQ</a>
                 </div>
                 <div class="footer-links">
@@ -616,6 +629,9 @@
             </div>
         </div>
     </footer>
+
+    <!-- Back to Top Button -->
+    <button id="backToTop" class="back-to-top" aria-label="Back to top">&uarr;</button>
 
     <script>
         // Mobile menu toggle
@@ -641,15 +657,26 @@
             });
         });
 
-        // Navbar background on scroll
+        // Navbar background on scroll + back-to-top visibility
         const navbar = document.querySelector('.navbar');
+        const backToTopBtn = document.getElementById('backToTop');
         window.addEventListener('scroll', () => {
             if (window.scrollY > 50) {
                 navbar.classList.add('scrolled');
             } else {
                 navbar.classList.remove('scrolled');
             }
+            if (backToTopBtn) {
+                backToTopBtn.classList.toggle('visible', window.scrollY > 500);
+            }
         });
+
+        // Back to top click
+        if (backToTopBtn) {
+            backToTopBtn.addEventListener('click', () => {
+                window.scrollTo({ top: 0, behavior: 'smooth' });
+            });
+        }
 
         // Animate elements on scroll
         const observerOptions = {
