Remove lazy loading from screenshots in index.html for improved image rendering

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                             <span class="placeholder-hint">Desktop Application</span>
                         </div>
                     </div>
-                    <img src="assets/screenshot-gui.svg" alt="Soteria Desktop Application" class="screenshot-img" loading="lazy">
+                    <img src="assets/screenshot-gui.svg" alt="Soteria Desktop Application" class="screenshot-img">
                     <h3>Desktop App</h3>
                     <p>Modern GUI with all features at your fingertips</p>
                 </div>
@@ -288,7 +288,7 @@
                             <span class="placeholder-hint">Command Line Interface</span>
                         </div>
                     </div>
-                    <img src="assets/screenshot-cli.svg" alt="Soteria CLI" class="screenshot-img" loading="lazy">
+                    <img src="assets/screenshot-cli.svg" alt="Soteria CLI" class="screenshot-img">
                     <h3>Command Line</h3>
                     <p>Powerful CLI for automation and scripting</p>
                 </div>
@@ -300,7 +300,7 @@
                             <span class="placeholder-hint">Browser Extension</span>
                         </div>
                     </div>
-                    <img src="assets/screenshot-extension.svg" alt="Soteria Browser Extension" class="screenshot-img" loading="lazy">
+                    <img src="assets/screenshot-extension.svg" alt="Soteria Browser Extension" class="screenshot-img">
                     <h3>Browser Extension</h3>
                     <p>Seamless autofill in Chrome, Edge, and Brave</p>
                 </div>
