--- a/index.html
+++ b/index.html
@@ -33,11 +33,9 @@
                 <span>Soteria</span>
             </a>
             <ul class="nav-links">
-                <li><a href="#how-it-works">How It Works</a></li>
                 <li><a href="#features">Features</a></li>
-                <li><a href="#demo">Demo</a></li>
-                <li><a href="#security">Security</a></li>
-                <li><a href="#faq">FAQ</a></li>
+                <li><a href="getting-started.html">Get Started</a></li>
+                <li><a href="security.html">Security</a></li>
                 <li><a href="updates.html">Updates</a></li>
                 <li><a href="https://github.com/nikokiru/soteria" target="_blank" class="btn btn-outline">GitHub</a></li>
             </ul>
@@ -59,6 +57,10 @@
                     <span class="badge">🔐 AES-256 Encryption</span>
                     <span class="badge">🖥️ GUI & CLI</span>
                     <span class="badge">🌐 Browser Extension</span>
+                </div>
+                <div class="hero-cta">
+                    <a href="getting-started.html" class="btn btn-primary btn-large">Get Started</a>
+                    <a href="security.html" class="btn btn-outline btn-large">Security Details</a>
                 </div>
             </div>
             <div class="hero-visual">
@@ -104,6 +106,34 @@
         </div>
         <div class="hero-bg"></div>
     </header>
+
+    <!-- Trust Badges -->
+    <section class="trust-bar">
+        <div class="container">
+            <div class="trust-badges">
+                <div class="trust-badge">
+                    <span class="trust-icon">&#128274;</span>
+                    <span class="trust-text">AES-256-GCM + Argon2id</span>
+                </div>
+                <div class="trust-badge">
+                    <span class="trust-icon">&#127968;</span>
+                    <span class="trust-text">100% Local Storage</span>
+                </div>
+                <div class="trust-badge">
+                    <span class="trust-icon">&#128065;&#65039;</span>
+                    <span class="trust-text">Open Source</span>
+                </div>
+                <div class="trust-badge">
+                    <span class="trust-icon">&#128683;</span>
+                    <span class="trust-text">Zero Data Collection</span>
+                </div>
+                <div class="trust-badge">
+                    <span class="trust-icon">&#9889;</span>
+                    <span class="trust-text">Free Forever</span>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- How It Works Section -->
     <section id="how-it-works" class="how-it-works">
@@ -313,7 +343,7 @@
         <div class="container">
             <div class="section-header">
                 <h2>Security First</h2>
-                <p>Built from the ground up with security as the top priority.</p>
+                <p>Built from the ground up with security as the top priority. <a href="security.html" style="color: rgba(255,255,255,0.9); text-decoration: underline;">Read the full whitepaper &rarr;</a></p>
             </div>
             <div class="security-grid">
                 <div class="security-item">
@@ -612,8 +642,8 @@
                 <div class="footer-links">
                     <h4>Quick Links</h4>
                     <a href="#features">Features</a>
-                    <a href="#security">Security</a>
-                    <a href="#demo">Password Generator</a>
+                    <a href="getting-started.html">Get Started</a>
+                    <a href="security.html">Security</a>
                     <a href="updates.html">Updates</a>
                     <a href="#faq">FAQ</a>
                 </div>
@@ -622,6 +652,7 @@
                     <a href="https://github.com/nikokiru/soteria" target="_blank">GitHub</a>
                     <a href="https://github.com/nikokiru/soteria/issues" target="_blank">Report Bug</a>
                     <a href="https://github.com/nikokiru/soteria/blob/main/LICENSE" target="_blank">License</a>
+                    <a href="privacy.html">Privacy Policy</a>
                 </div>
             </div>
             <div class="footer-bottom">
