--- a/updates.html
+++ b/updates.html
@@ -31,10 +31,9 @@
                 <span>Soteria</span>
             </a>
             <ul class="nav-links">
-                <li><a href="index.html#how-it-works">How It Works</a></li>
                 <li><a href="index.html#features">Features</a></li>
-                <li><a href="index.html#demo">Demo</a></li>
-                <li><a href="index.html#security">Security</a></li>
+                <li><a href="getting-started.html">Get Started</a></li>
+                <li><a href="security.html">Security</a></li>
                 <li><a href="updates.html" class="nav-active">Updates</a></li>
                 <li><a href="https://github.com/nikokiru/soteria" target="_blank" class="btn btn-outline">GitHub</a></li>
             </ul>
@@ -157,8 +156,8 @@
                 <div class="footer-links">
                     <h4>Quick Links</h4>
                     <a href="index.html#features">Features</a>
-                    <a href="index.html#security">Security</a>
-                    <a href="index.html#demo">Password Generator</a>
+                    <a href="getting-started.html">Get Started</a>
+                    <a href="security.html">Security</a>
                     <a href="updates.html">Updates</a>
                     <a href="index.html#faq">FAQ</a>
                 </div>
@@ -167,6 +166,7 @@
                     <a href="https://github.com/nikokiru/soteria" target="_blank">GitHub</a>
                     <a href="https://github.com/nikokiru/soteria/issues" target="_blank">Report Bug</a>
                     <a href="https://github.com/nikokiru/soteria/blob/main/LICENSE" target="_blank">License</a>
+                    <a href="privacy.html">Privacy Policy</a>
                 </div>
             </div>
             <div class="footer-bottom">
