style: update CSS for improved aesthetics and responsiveness
- Introduced a primary gradient for buttons and adjusted background colors.
- Enhanced shadow effects and border styles for a more modern look.
- Increased line heights and font sizes for better readability.
- Modified padding and margins across various sections for improved layout.
- Added new trust strip section and removed outdated trust bar.
- Implemented accessibility features for reduced motion preferences.
- Updated showcase and comparison card styles for better user experience.

--- a/getting-started.html
+++ b/getting-started.html
@@ -270,6 +270,48 @@
         </div>
     </section>
 
+    <!-- Keyboard Shortcuts -->
+    <section class="content-section">
+        <div class="container">
+            <div class="section-header">
+                <h2>Keyboard Shortcuts</h2>
+                <p>Work faster with built-in hotkeys in the desktop app.</p>
+            </div>
+            <div class="cli-reference">
+                <div class="cli-group">
+                    <h3>Desktop App</h3>
+                    <div class="cli-command">
+                        <code>Ctrl + N</code>
+                        <span>Add new entry</span>
+                    </div>
+                    <div class="cli-command">
+                        <code>Ctrl + F</code>
+                        <span>Focus search</span>
+                    </div>
+                    <div class="cli-command">
+                        <code>Ctrl + L</code>
+                        <span>Lock vault</span>
+                    </div>
+                    <div class="cli-command">
+                        <code>Ctrl + G</code>
+                        <span>Open password generator</span>
+                    </div>
+                    <div class="cli-command">
+                        <code>Ctrl + Q</code>
+                        <span>Quit application</span>
+                    </div>
+                </div>
+                <div class="cli-group">
+                    <h3>Global (System-wide)</h3>
+                    <div class="cli-command">
+                        <code>Ctrl + Alt + P</code>
+                        <span>Show/hide Soteria (configurable)</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Next Steps -->
     <section class="content-section content-section-alt">
         <div class="container">
